<resources>
    <string name="app_name">InvoiceApp</string>
    <string name="action_settings">Settings</string>
    <string name="action_save">SAVE</string>
    <string name="action_edit">EDIT</string>
    <string name="action_delete">DELETE</string>
    <string name="skip">SKIP</string>
    <string name="previous">PREVIOUS</string>
    <string name="next">NEXT</string>
    <string name="finish">FINISH</string>
    <string name="what_do_you_invoice_for">What do you invoice for?</string>
    <string name="title_activity_invoice">InvoiceActivity</string>
    <string name="title_activity_invoice_activity_main">Invoices</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="who_do_you_invoice">Who do you invoice?</string>
    <string name="repeat_business">Repeat Business</string>
    <string name="expense_per_job">Expense per job or client</string>
    <string name="invoices_per_month">Invoices per month</string>
    <string name="years_in_business">Years in business</string>
    <string name="business_revenue">Business Revenue</string>
    <string name="preferred_invoice_design">Preferred invoice design/appearance</string>
    <string name="onboarding_done">"You've got the basics setup now, go ahead and create your first invoice!"</string>
    <string-array name="expenses">
        <item>I charge for them on invoices</item>
        <item>I build them into my prices</item>
        <item>None</item>
    </string-array>
    <string-array name="invoiceDesign">
        <item>No frills</item>
        <item>Creative</item>
    </string-array>
    <string-array name="invoiceType">
        <item>Products that you sell</item>
        <item>Labor and parts/materials</item>
        <item>Services, projects or jobs that you perform</item>
        <item>Rentals</item>
    </string-array>
    <string-array name="invoiceWho">
        <item>Businesses</item>
        <item>Individuals</item>
        <item>Just one business or individual</item>
    </string-array>
    <string-array name="invoicesPerMonth">
        <item>Less than 1</item>
        <item>1 to 2</item>
        <item>3 to 5</item>
        <item>5 to 10</item>
        <item>10 to 20</item>
        <item>20 to 30</item>
        <item>30 to 50</item>
        <item>50 to 100</item>
        <item>100+</item>
    </string-array>
    <string-array name="repeat">
        <item>Mostly repeat customers</item>
        <item>Mostly new customers</item>
        <item>Just one customer</item>
    </string-array>
    <string-array name="revenue">
        <item>USD $0-$10k/yr</item>
        <item>USD $10k-$25k/yr</item>
        <item>USD $25k-$50k/yr</item>
        <item>USD $50k-$75k/yr</item>
        <item>USD $75k-$100k/yr</item>
        <item>USD $100k-$200k/yr</item>
        <item>USD $200k-$500k/yr</item>
        <item>USD $500k-$1m/yr</item>
        <item>USD $1m+/yr</item>
    </string-array>
    <string-array name="yearsInBusiness">
        <item>Just getting started</item>
        <item>Less than 1 year</item>
        <item>More than 1 year</item>
        <item>More than 2 years</item>
        <item>More than 3 years</item>
        <item>More than 5 years</item>
        <item>More than 10 years</item>
    </string-array>
    <string-array name="currency">
        <item>USD($)</item>
        <item>GBP(£)</item>
        <item>AUD($)</item>
        <item>CAD($)</item>
        <item>EUR(€)</item>
        <item>CNY(¥)</item>
        <item>HKD($)</item>
        <item>TWD($)</item>
        <item>AED(Dhs)</item>
        <item>ALL(Lek)</item>
        <item>AOA(Kz)</item>
        <item>ARS($)</item>
        <item>BGN(лв)</item>
        <item>BHD(.د.ب)</item>
        <item>BRL(R$)</item>
        <item>BOB(Bs)</item>
        <item>BWP(P)</item>
        <item>BZD(BZ$)</item>
        <item>CFA(Fr)</item>
        <item>CHF(CH₣)</item>
        <item>CLP($)</item>
        <item>COP(COL$)</item>
        <item>CRC(₡)</item>
        <item>CZK(Kč)</item>
        <item>DKK(kr)</item>
        <item>DOP(RD$)</item>
        <item>EGP(E£)</item>
        <item>GHS(GH₵)</item>
        <item>GTQ(Q)</item>
        <item>HRK(kn)</item>
        <item>HUF(Ft)</item>
        <item>IDR(Rp)</item>
        <item>ILS(₪)</item>
        <item>INR(₹)</item>
        <item>JMD($)</item>
        <item>JOD(JD)</item>
        <item>JPY(¥)</item>
        <item>KES(KSh)</item>
        <item>KRW(W)</item>
        <item>KWD(KD)</item>
        <item>KZT(₸)</item>
        <item>LKR(Rs)</item>
        <item>MAD(د.م.)</item>
        <item>MKD(ден)</item>
        <item>MMK(K)</item>
        <item>MXN($)</item>
        <item>MYR(RM)</item>
        <item>OMR(﷼)</item>
        <item>NAD(N$)</item>
        <item>NIO(C$)</item>
        <item>NOK(kr)</item>
        <item>NGN(N)</item>
        <item>NZD($)</item>
        <item>PEN(S/.)</item>
        <item>PHP(₱)</item>
        <item>PKR(₨)</item>
        <item>PLN(zł)</item>
        <item>PYG(₲)</item>
        <item>RON(lei)</item>
        <item>RUB(₽)</item>
        <item>RWF(FRw)</item>
        <item>SAR(﷼)</item>
        <item>SEK(kr)</item>
        <item>SGD($)</item>
        <item>SLL(Le)</item>
        <item>THB(฿)</item>
        <item>TND(د.ت)</item>
        <item>TRL(₤)</item>
        <item>TRY(₺)</item>
        <item>TTD(TT$)</item>
        <item>TZS(TSh)</item>
        <item>UGX(USh)</item>
        <item>UAH(₴)</item>
        <item>VND(₫)</item>
        <item>ZAR(R)</item>
        <item>VEF(Bs)</item>
        <item>ZMW(ZMK)</item>
    </string-array>
    <string name="title_activity_add_item">AddItemActivity</string>
    <string name="setting_business">Business</string>
    <string name="setting_logo">Logo</string>
    <string name="setting_name">Name, address &amp; reg number </string>
    <string name="setting_phone">Phone, email &amp; website </string>
    <string name="setting_payment">Payment (Bank Transfer,PayPal etc)</string>
    <string name="setting_invoice">Invoice</string>
    <string name="setting_texas">Taxes</string>
    <string name="setting_sendacopy">Send me a copy</string>
    <string name="setting_defaultPaid">Default paid</string>
    <string name="setting_defaultNote">Default notes</string>
    <string name="setting_ToggleQuantity">Toggle quantity &amp; amount</string>
    <string name="setting_Rename">Rename fields</string>
    <string name="setting_send">SEND</string>
    <string name="setting_sendsms">SMS app</string>
    <string name="setting_sendemail">Email app</string>
    <string name="setting_noti">Notification</string>
    <string name="setting_invoiceopen">Invoice opened</string>
    <string name="setting_failedtodeliver">Failed to deliver invoice</string>
    <string name="setting_locale">Locale</string>
    <string name="setting_currency">Currency</string>
    <string name="setting_dateformat">Date format</string>
    <string name="setting_language">Language</string>
    <string name="setting_about">ABOUT</string>
    <string name="setting_changelog">Change log</string>
    <string name="setting_buy">Purchase full version</string>
    <string name="external_dir">InvoiceApp</string>
    <string name="bill_payment">TAKE PAYMENT</string>
    <string name="bill_reciept">Due on reciept</string>
    <string name="bill_default">INV0001</string>
    <string name="bill_business_detail">Business name,detail logo</string>
    <string name="bill_to">To</string>
    <string name="bill_addItem">Add Item</string>
    <string name="bill_subtotal">Subtotal</string>
    <string name="bill_Discount">Discount</string>
    <string name="bill_shipping">Shipping</string>
    <string name="bill_text">Tax</string>
    <string name="bill_total">Total</string>
    <string name="bill_paid">Paid</string>
    <string name="bill_balancedue">Balance Due</string>
    <string name="bill_signature">Signature</string>
    <string name="bill_Notes">Notes</string>
    <string name="bill_addphoto">Add photo</string>
    <string name="bill_client">Client</string>
    <string name="invoice_info_1">Invoice #</string>
    <string name="invoice_info_2">Date</string>
    <string name="invoice_info_3">Terms</string>
    <string name="invoice_info_4">Due</string>
    <string name="invoice_info_5">PO Number</string>
    <string name="invoice_payment_1">Paypal address</string>
    <string name="invoice_payment_2">Enter your paypal email address</string>
    <string name="invoice_payment_3">Make checks payable to</string>
    <string name="invoice_payment_4">You or your business\'s name </string>
    <string name="invoice_payment_5">Bank transfer</string>
    <string name="invoice_payment_6">Enter bank account # and other details here</string>
    <string name="invoice_payment_7">Other</string>
    <string name="invoice_payment_8">Additional payment instrruction</string>
    <string name="invoice_shipping_1">Amount</string>
    <string name="invoice_shipping_2">Ship Date</string>
    <string name="invoice_shipping_3">Ship Via</string>
    <string name="invoice_shipping_4">Tracking #</string>
    <string name="invoice_shipping_5">FOB</string>
    <string name="invoice_additem_1">Description</string>
    <string name="invoice_additem_2">Unit cost</string>
    <string name="invoice_additem_3">Quantity</string>
    <string name="invoice_additem_4">Additional details</string>
    <string name="invoice_additem_5">Save to My Item for future invoices</string>
    <string name="noTax">None</string>
    <string name="itemTax">Per item</string>
    <string name="totalTax">On the total</string>
    <string name="taxDeducted">Deducted</string>
    <string-array name="tax_type">
        <item>@string/noTax</item>
        <item>@string/itemTax</item>
        <item>@string/totalTax</item>
        <item>@string/taxDeducted</item>
    </string-array>
    <string-array name="terms">
        <item>@string/uv_select_none</item>
        <item>@string/sameDay</item>
        <item>@string/days_1</item>
        <item>@string/days_2</item>
        <item>@string/days_3</item>
        <item>@string/days_4</item>
        <item>@string/days_5</item>
        <item>@string/days_6</item>
        <item>@string/days_7</item>
        <item>@string/days_10</item>
        <item>@string/days_14</item>
        <item>@string/days_21</item>
        <item>@string/days_30</item>
        <item>@string/days_45</item>
        <item>@string/days_60</item>
        <item>@string/days_90</item>
        <item>@string/days_120</item>
        <item>@string/days_180</item>
        <item>@string/days_365</item>
        <item>@string/terms_custom</item>
    </string-array>
    <string-array name="terms_value">
        <item>-2</item>
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>10</item>
        <item>14</item>
        <item>21</item>
        <item>30</item>
        <item>45</item>
        <item>60</item>
        <item>90</item>
        <item>120</item>
        <item>180</item>
        <item>365</item>
        <item>-1</item>
    </string-array>
    <string name="sameDay">Due on receipt</string>
    <string name="terms_custom">Custom</string>
    <string name="days_1">Next day</string>
    <string name="days_10">10 Days</string>
    <string name="days_120">120 Days</string>
    <string name="days_14">14 Days</string>
    <string name="days_180">180 Days</string>
    <string name="days_2">2 Days</string>
    <string name="days_21">21 Days</string>
    <string name="days_3">3 Days</string>
    <string name="days_30">30 Days</string>
    <string name="days_365">365 Days</string>
    <string name="days_4">4 Days</string>
    <string name="days_45">45 Days</string>
    <string name="days_5">5 Days</string>
    <string name="days_6">6 Days</string>
    <string name="days_60">60 Days</string>
</resources>