<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="?attr/actionBarSize"
    android:orientation="vertical">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/setting_gray"
                android:orientation="vertical"
                android:paddingLeft="5dp">

                <TextView
                    android:id="@+id/btnBusiness"
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:gravity="center_vertical"
                    android:text="@string/setting_business"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/btnLogo"
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:text="@string/setting_logo"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/setting_gray"></TextView>

                <TextView
                    android:id="@+id/btnNameAdress"
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:text="@string/setting_name"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/setting_gray"></TextView>

                <TextView
                    android:id="@+id/btnPhoneLogo"
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:text="@string/setting_phone"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/setting_gray"></TextView>

                <TextView
                    android:id="@+id/btnPayment"
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:text="@string/setting_payment"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/setting_gray"
                    android:orientation="vertical"
                    android:paddingLeft="5dp">

                    <TextView
                        android:id="@+id/btnInvoice"
                        android:layout_width="match_parent"
                        android:layout_height="42dp"
                        android:gravity="center_vertical"
                        android:text="@string/setting_invoice"
                        android:textColor="@color/white"
                        android:textSize="16sp" />

                </LinearLayout>


                <TextView
                    android:id="@+id/btnTaxes"
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:text="@string/setting_texas"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/setting_gray"></TextView>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="42dp">


                        <TextView
                            android:id="@+id/btnSendCopy"
                            android:layout_width="wrap_content"
                            android:layout_height="42dp"
                            android:layout_alignParentLeft="true"
                            android:gravity="center_vertical"
                            android:paddingLeft="10dp"
                            android:text="@string/setting_sendacopy"
                            android:textColor="@color/black"
                            android:textSize="16sp" />


                        <ToggleButton
                            android:id="@+id/toggleSendmeCopy"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true" />
                    </RelativeLayout>

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/setting_gray"></TextView>


                <TextView
                    android:id="@+id/btnDefaultPaid"
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:text="@string/setting_defaultPaid"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/setting_gray"></TextView>


                <TextView
                    android:id="@+id/btnDefaultNote"
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:text="@string/setting_defaultNote"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/setting_gray"></TextView>


                <TextView
                    android:id="@+id/btnQuantityAmount"
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:text="@string/setting_ToggleQuantity"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/setting_gray"></TextView>


                <TextView
                    android:id="@+id/btnRenameFields"
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:text="@string/setting_Rename"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/setting_gray"></TextView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/setting_gray"
                    android:orientation="vertical"
                    android:paddingLeft="5dp">

                    <TextView
                        android:id="@+id/btnSend"
                        android:layout_width="match_parent"
                        android:layout_height="42dp"
                        android:gravity="center_vertical"
                        android:text="@string/setting_send"
                        android:textColor="@color/white"
                        android:textSize="16sp" />

                </LinearLayout>

                <!-- include part 2 here-->

                <include layout="@layout/setting_activity_part_2"></include>
            </LinearLayout>

        </LinearLayout>

    </ScrollView>
</LinearLayout>
